# ibus-rs

./: Cargo.toml  LICENSE  LICENSE-MIT  Readme.md
examples/: bus.rs  complex.rs  simple.rs
src/: bus.rs  input_context.rs  lib.rs  object.rs  text.rs
