[package]
name = "ibus"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Artur Kovacs <kovacs.artur.barnabas@gmail.com>"]
repository = "https://github.com/ArturKovacs/ibus-dl"
description = "IBus implementation in Rust"
keywords = ["ime"]
edition = "2021"

[dependencies]
bitflags = "1.3.2"
dbus = "0.9"
thiserror = "1"
