[package]
name = "ibus"
version = "0.2.0"
license = "MIT OR Apache-2.0"
authors = ["Artur Kovacs <kovacs.artur.barnabas@gmail.com>"]
repository = "https://github.com/ArturKovacs/ibus-rs"
description = "IBus implementation in Rust"
readme = "Readme.md"
keywords = ["ime"]
edition = "2021"

[dependencies]
bitflags = "1.3.2"
dbus = "0.9"
thiserror = "1"
log = "0.4"

[dev-dependencies]
simple_logger = "1"
